--- a/docs/.vitepress/theme/styles/custom.css
+++ b/docs/.vitepress/theme/styles/custom.css
@@ -4,6 +4,8 @@
   --vp-c-indigo-3: #88e47e;
 }
 
+/* rgb(0 223 19 / 14%) */
+
 :root {
   --vp-home-hero-name-color: transparent;
   --vp-home-hero-name-background: linear-gradient(
@@ -18,6 +20,8 @@
     #8fff79 50%
   );
   --vp-home-hero-image-filter: blur(64px);
+
+  --vp-c-tip-soft: rgb(0 223 19 / 14%);
 }
 
 .footnotes {
